--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "font-awesome": "4.7.0",
     "react": "16.2.0",
     "react-chartjs-2": "2.7.0",
+    "react-document-title": "^2.0.3",
     "react-dom": "16.2.0",
     "react-router-dom": "4.2.2",
     "react-transition-group": "2.2.1",
