--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,4 @@
 {
-  "presets": [
-    ["react"], ["env"]
-  ],
-  "plugins": ["transform-object-rest-spread"]
+  "presets": ["env", "react"],
+  "plugins": ["transform-class-properties", "transform-object-rest-spread"]
 }
