--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "webpack-dev-server": "2.11.1"
   },
   "dependencies": {
+    "babel-plugin-transform-class-properties": "^6.24.1",
     "bootstrap": "4.0.0",
     "chart.js": "2.7.1",
     "font-awesome": "4.7.0",
