--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
   "scripts": {
     "stats":
       "webpack -d --progress --watch --profile --json > compilation-stats.json --env.dev",
-    "start": "webpack-dev-server --progress --color --inline --env.dev",
+    "start": "webpack-dev-server --progress --color --inline --env.dev --host=0.0.0.0",
     "build": "webpack -p --progress --env.prod"
   },
   "engines": {
